--- a/sample.css
+++ b/sample.css
@@ -1,42 +1,54 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap");
 
 .bg-container {
-    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/chatbg.png');
+    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/arvrbg.png');
+    height: 100vh;
+    background-size: cover;
 }
 
-.person-name {
-    text-align: center;
-    color: #ffffff;
-    background-color: #323f4b;
+.advanced-technologies-card {
+    background-color: #ffffff;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    padding: 25px;
+}
+
+.advanced-technologies-title {
+    color: #5752ab;
+    font-family: "Bree Serif";
+    font-size: 24px;
+}
+
+.advanced-technologies-description {
+    color: #323f4b;
     font-family: "Roboto";
-    font-size: 20px;
-    font-weight: 600;
-    padding: 18px;
 }
 
-.messages-container {
-    padding: 20px;
-}
-
-.message-text {
-    color: #ffffff;
+.learn-more-button {
+    color: #171f46;
+    background-color: #ffffff;
     font-family: "Roboto";
-    font-size: 14px;
-    padding: 14px;
+    font-size: 12px;
+    font-weight: 500;
+    width: 126px;
+    height: 38px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #d7dfe9;
+    border-radius: 8px;
+    margin-right: 5px;
 }
 
-.message-received {
-    text-align: left;
-    background-color: #52606d;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
-}
+.save-draft-button {
+    color: #ffffff;
+    background-color: #5752ab;
+    font-family: "Roboto";
+    font-size: 12px;
+    font-weight: 500;
+    width: 126px;
+    height: 38px;
+    border-width: 0px;
+    border-radius: 8px;
+    margin-left: 5px;
 
-.message-sent {
-    text-align: right;
-    background-color: #47a3f3;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    border-bottom-left-radius: 8px;
 }
