--- a/sample.css
+++ b/sample.css
@@ -1,49 +1,64 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap");
 
-.bg-container {
-    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/hotelbg.png');
-    height: 100vh;
-    background-size: cover;
+.cricketer-top-section {
+    background-color: #fb4e71;
+    padding: 15px;
 }
 
-.card-container {
-    background-color: #000000e6;
-    padding: 20px;
-    border-radius: 16px;
-    margin: 15px;
-
-}
-
-.hotel-name {
+.cricketer-name {
     color: #ffffff;
-    font-family: "Bree Serif";
-    font-size: 18px;
+    font-family: "Roboto";
+    font-size: 22px;
+    font-weight: bold;
 }
 
-.hotel-add {
+.cricketer-description {
     color: #ffffff;
     font-family: "Roboto";
     font-size: 12px;
-    font-weight: 500;
 }
 
-.hotel-price {
-    color: #ffffff;
-    font-family: "Bree Serif";
-    font-size: 18px;
+.cricketer-bottom-section {
+    background-color: #e6f6ff;
+    height: 500px;
+    padding: 10px;
 }
 
-.button {
+.sub-title {
+    color: #323f4b;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.ipl-container {
     background-color: #ffffff;
-    font-family: "Roboto";
-    border-width: 0px;
-    border-radius: 8px;
-    font-size: 12px;
-    width: 119px;
-    height: 38px;
+    border-radius: 12px;
+    margin: 5px;
 }
 
-.button-container {
-    text-align: center;
-    margin: 20px;
+.ipl-card-text {
+    padding: 8px;
+}
+
+.ipl-card-title {
+    color: #323f4b;
+    font-family: "Roboto";
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.ipl-card-caption {
+    color: #888888;
+    font-family: "Roboto";
+    font-size: 14px;
+}
+
+.video-text-container {
+    width: 96px;
+    margin: 5px;
+}
+
+.video-description {
+    font-family: "Roboto";
+    font-size: 12px;
 }
