--- a/sample.css
+++ b/sample.css
@@ -1,27 +1,56 @@
-@import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
-.mobile-image {
+.conference-image {
     width: 100vw;
 }
 
-.details-container {
-    border-style: solid;
-    border-width: 2px;
-    border-color: #a1f44;
-    padding: 20px;
+.conference-container {
+    padding: 35px;
 }
 
-.details-heading {
+.conference-heading {
+    color: #183b56;
+    font-family: "Roboto";
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.conference-description {
+    color: #5a7184;
+    font-family: "Roboto";
+    font-size: 18px;
+}
+
+.conference-sub-title {
+    color: #183b56;
     font-family: "Roboto";
     font-size: 22px;
-    color: #a1f44;
-    font-weight: 600;
+    font-weight: bold;
 }
 
-.list-item {
-    color: #a1f44;
-    font-size: 14px;
+.conference-sub-description {
+    color: #5a7184;
     font-family: "Roboto";
-    font-weight: 500;
-    padding: 5px;
+    font-size: 18px;
+}
+
+.conference-status-container {
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 10px;
+}
+
+.conference-status-heading {
+    color: #183b56;
+    font-family: "Roboto";
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.conference-status-description {
+    color: #5a7184;
+    font-family: "Roboto";
+    font-size: 18px;
 }
