--- a/sample.css
+++ b/sample.css
@@ -1,56 +1,83 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
-.conference-image {
-    width: 100vw;
+.bg-container {
+    background-color: #875fc0;
+    padding: 24px;
 }
 
-.conference-container {
-    padding: 35px;
-}
-
-.conference-heading {
-    color: #183b56;
-    font-family: "Roboto";
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.conference-description {
-    color: #5a7184;
+.score {
     font-family: "Roboto";
     font-size: 18px;
+    color: #ffffff;
+    font-weight: 700;
+    text-align: right;
 }
 
-.conference-sub-title {
-    color: #183b56;
+.question-container {
+    padding: 16px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.question-no {
     font-family: "Roboto";
     font-size: 22px;
-    font-weight: bold;
+    font-weight: 500;
+    color: #1f2933;
 }
 
-.conference-sub-description {
-    color: #5a7184;
+.question {
     font-family: "Roboto";
-    font-size: 18px;
+    font-size: 14px;
+    color: #323f4b;
+    font-weight: 500;
 }
 
-.conference-status-container {
-    margin-right: 5px;
-    margin-left: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding: 10px;
+.question-image {
+    width: 240px;
 }
 
-.conference-status-heading {
-    color: #183b56;
+.answer-container {
+    background-color: #ffffff;
+    border-radius: 8px;
+    padding: 16px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+
+}
+
+.answer {
+    font-size: 16px;
+    color: #323f4b;
     font-family: "Roboto";
-    font-size: 22px;
-    font-weight: bold;
+    font-weight: 500;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #323f4b;
+    padding: 13px;
+    margin: 10px;
+    border-radius: 8px;
 }
 
-.conference-status-description {
-    color: #5a7184;
+.order-list {
+    list-style-type: none;
+    padding: 0px;
+}
+
+.correct-answer {
+    color: #ffffff;
+    background-color: #875fc0;
+}
+
+.button {
+    color: #ffffff;
+    background-color: #fbaf00;
     font-family: "Roboto";
-    font-size: 18px;
+    font-size: 14px;
+    font-weight: 500;
+    border-width: 0px;
+    border-radius: 8px;
+    width: 98px;
+    height: 38px;
 }
