--- a/sample.css
+++ b/sample.css
@@ -1,83 +1,105 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
-.bg-container {
-    background-color: #875fc0;
-    padding: 24px;
+.podcasts-home-page-bg-container {
+    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/podcasts-bg.png');
+    height: 30vh;
+    background-size: cover;
 }
 
-.score {
-    font-family: "Roboto";
-    font-size: 18px;
+.podcasts-heading {
     color: #ffffff;
-    font-weight: 700;
-    text-align: right;
+    font-family: "Roboto";
+    font-size: 32px;
+    font-weight: 200;
+    padding: 20px;
 }
 
-.question-container {
-    padding: 16px;
-    background-color: #ffffff;
-    border-radius: 8px;
+.podcasts-card-container {
+    padding: 15px;
+}
+
+.details-card {
+    margin: 10px;
     text-align: center;
 }
 
-.question-no {
-    font-family: "Roboto";
-    font-size: 22px;
-    font-weight: 500;
-    color: #1f2933;
+.podcast-image {
+    width: 144px;
+    height: 112px;
+    margin-top: 10px;
 }
 
-.question {
+.podcast-name {
+    color: #151765;
+    font-family: "Roboto";
+    font-weight: bold;
+    font-size: 16px;
+    margin-top: 5px;
+}
+
+.episodes-count {
+    color: #5a7184;
+    font-family: "Roboto";
+    font-size: 16px;
+}
+
+.podcast-header {
+    background-color: #151765;
+    height: 170px;
+    padding: 20px;
+}
+
+.podcast-text-container {
+    padding-left: 10px;
+}
+
+.category {
+    color: #ffffff;
+    font-family: "Roboto";
+    font-size: 12px;
+}
+
+.podcast-title {
+    color: #ffffff;
+    font-family: "Roboto";
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.podcast-caption {
+    color: #ffffff;
+    font-family: "Roboto";
+    font-size: 12px;
+}
+
+.podcast-episode-container {
+    margin: 10px;
+}
+
+.podcast-description {
+    color: #5a7184;
     font-family: "Roboto";
     font-size: 14px;
-    color: #323f4b;
-    font-weight: 500;
 }
 
-.question-image {
-    width: 240px;
-}
-
-.answer-container {
-    background-color: #ffffff;
-    border-radius: 8px;
-    padding: 16px;
-    margin-top: 24px;
-    margin-bottom: 24px;
-
-}
-
-.answer {
-    font-size: 16px;
-    color: #323f4b;
+.podcast-duration {
+    color: #151765;
     font-family: "Roboto";
-    font-weight: 500;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #323f4b;
-    padding: 13px;
-    margin: 10px;
-    border-radius: 8px;
+    font-size: 10px;
 }
 
-.order-list {
-    list-style-type: none;
-    padding: 0px;
-}
-
-.correct-answer {
-    color: #ffffff;
-    background-color: #875fc0;
+.button-container {
+    margin: 20px;
 }
 
 .button {
     color: #ffffff;
-    background-color: #fbaf00;
+    background-color: #141961;
     font-family: "Roboto";
-    font-size: 14px;
-    font-weight: 500;
+    font-weight: 600;
+    font-size: 12px;
+    width: 75px;
+    height: 24px;
+    border-radius: 25px;
     border-width: 0px;
-    border-radius: 8px;
-    width: 98px;
-    height: 38px;
 }
